--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>nongshim</title>
+    <link rel="stylesheet" href="reset.css">
+    <title>농심</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
